Fix '4.8.0 creates invalid mysql statements on windows'.

The performed replace was too simple.

BUG:378676
FIXED-IN:4.8.1