kmymoney/mymoney/storage/mymoneydbdef.cpp
@@ -490,6 +490,8 @@ const QString MyMoneyDbDef::generateSQL(const KSharedPtr<MyMoneyDbDriver>& drive
   for (fit = fi.begin(); fit != fi.end(); ++fit) {
     QString toReplace = (*fit)->name();
     toReplace.prepend(':');
+    QString endSymbol = fit+1 == fi.end() ? ")" : ",";
+    toReplace.append(endSymbol);
     QString replace = "NULL";
     if ((*fit)->name() == "version")
       replace = QString::number(m_currentVersion);
@@ -506,6 +508,7 @@ const QString MyMoneyDbDef::generateSQL(const KSharedPtr<MyMoneyDbDriver>& drive
                 + QLatin1Char('\'');
     if ((*fit)->name() == "updateInProgress")
       replace = enclose("N");
+    replace.append(endSymbol);
     qs.replace(toReplace, replace);
   }
   qs += "\n\n";
